--- a/index.html
+++ b/index.html
@@ -3,104 +3,92 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>wrk</title>
-  <meta name="description" content="Personal website for wrk" />
-  <link rel="stylesheet" href="./wrk_files/b71a989fe353739b.css" />
-  <script src="https://unpkg.com/lanyard@latest/dist/index.js"></script>
+  <title>wrk.money</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
   <style>
-    .crypto-button {
-      cursor: pointer;
+    .glass {
+      background: rgba(255, 255, 255, 0.05);
+      backdrop-filter: blur(10px);
+    }
+    .glass-hover:hover {
+      background: rgba(255, 255, 255, 0.1);
+    }
+    .glow {
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.1);
     }
   </style>
 </head>
-<body class="bg-black text-white font-sans">
-  <!-- Splash screen -->
-  <div id="splash" onclick="enterSite()" style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999;background:rgba(0,0,0,0.9);backdrop-filter:blur(12px);display:flex;align-items:center;justify-content:center;flex-direction:column;color:white;text-align:center;cursor:pointer;">
-    <h1 style="font-size:2rem;margin-bottom:0.5rem;">Click / Tap Anywhere to Enter</h1>
-    <p style="font-size:0.9rem;opacity:0.7;">Audio will begin playing</p>
+<body class="bg-black text-white">
+  <div class="container mx-auto px-4 py-8">
+    <h1 class="text-3xl font-bold mb-4">Welcome to wrk.money</h1>
+
+    <!-- Payments Section -->
+    <div class="glass rounded-lg p-5 glow mb-8">
+      <h3 class="text-sm font-medium mb-4">Payments</h3>
+      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-5 gap-3 place-items-center">
+        <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" href="https://www.paypal.com/paypalme/g6zey" rel="noopener noreferrer" target="_blank">
+          <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+            <svg fill="currentColor" height="22" viewBox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M14.06...Z"/></svg>
+          </div><span class="text-sm">PayPal</span>
+        </a>
+
+        <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" href="https://cash.app/$sleepydidit" rel="noopener noreferrer" target="_blank">
+          <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+            <svg fill="currentColor" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M11.92...Z"/></svg>
+          </div><span class="text-sm">Cashapp</span>
+        </a>
+
+        <button onclick="copyToClipboard('0x02746807aB8a2a88d3D93dE3c595259984dDE738')" class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300">
+          <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+            <svg fill="currentColor" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M11.944 17.97L4.58...Z"/></svg>
+          </div><span class="text-sm">ETH</span>
+        </button>
+
+        <button onclick="copyToClipboard('MSPTT8F24NtXmLwFJq7rEE4CLWNyww28is')" class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300">
+          <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
+            <svg fill="currentColor" height="22" viewBox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M11.944 17.97L4.58...Z"/></svg>
+          </div><span class="text-sm">LTC</span>
+        </button>
+      </div>
+    </div>
+
+    <!-- Lanyard Status Block -->
+    <div class="glass rounded-lg p-5 glow mb-8">
+      <h3 class="text-sm font-medium mb-4">Discord Status</h3>
+      <div class="flex items-center space-x-3">
+        <div id="status-dot" class="w-3 h-3 rounded-full bg-gray-500"></div>
+        <span id="custom-status">Loading status...</span>
+      </div>
+    </div>
   </div>
 
-  <!-- Content and status -->
-  <main class="min-h-screen text-white flex flex-col items-center justify-center p-4">
-    <div class="text-center mb-4">
-      <div class="text-2xl font-mono"><span id="live-time">--:--</span></div>
-      <div class="text-sm text-zinc-400 mt-1">Monday, July 7, 2025</div>
-    </div>
-
-    <div class="glass p-6 mb-4">
-      <div class="flex gap-5 items-center">
-        <div class="w-20 h-20 rounded-full overflow-hidden border-2 border-zinc-800">
-          <img src="./wrk_files/juice-wrld-gif-2.png" class="w-full h-full object-cover" alt="Profile" />
-        </div>
-        <div>
-          <h1 class="text-2xl font-bold">wrk</h1>
-          <p class="text-zinc-400 text-sm mt-1">cybersecurity student / physical-sec dev</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Discord Status -->
-    <div class="glass p-5 mb-4">
-      <h3 class="text-sm font-medium">Discord Status</h3>
-      <div id="discord-status" class="text-sm mt-3">Loading...</div>
-    </div>
-
-    <!-- Payments -->
-    <div class="glass p-5">
-      <h3 class="text-sm font-medium mb-4">Payments</h3>
-      <div class="grid grid-cols-3 gap-4">
-        <a href="https://www.paypal.com/paypalme/g6zey" target="_blank">PayPal</a>
-        <a href="https://cash.app/$sleepydidit" target="_blank">CashApp</a>
-        <div class="crypto-button" onclick="copyCrypto('0x02746807aB8a2a88d3D93dE3c595259984dDE738')">ETH</div>
-        <div class="crypto-button" onclick="copyCrypto('MSPTT8F24NtXmLwFJq7rEE4CLWNyww28is')">LTC</div>
-      </div>
-    </div>
-  </main>
-
-  <audio autoplay loop preload="auto" src="wrk_files/in-da-party.mp3"></audio>
-
   <script>
-    function enterSite() {
-      document.getElementById('splash').style.display = 'none';
-      document.body.style.overflow = 'auto';
-      const audio = document.querySelector('audio');
-      if (audio) audio.play().catch(err => console.log("Autoplay blocked:", err));
+    function copyToClipboard(text) {
+      navigator.clipboard.writeText(text).then(() => {
+        alert('Copied: ' + text);
+      }).catch(err => {
+        console.error('Copy failed', err);
+      });
     }
 
-    function updateTime() {
-      const clock = document.querySelector('#live-time');
-      const now = new Date();
-      let hours = now.getHours();
-      let minutes = now.getMinutes();
-      let ampm = hours >= 12 ? 'PM' : 'AM';
-      hours = hours % 12;
-      hours = hours ? hours : 12;
-      if (minutes < 10) minutes = '0' + minutes;
-      clock.textContent = hours + ':' + minutes + ' ' + ampm;
-    }
-    setInterval(updateTime, 1000);
-    updateTime();
-
-    function copyCrypto(address) {
-      navigator.clipboard.writeText(address)
-        .then(() => alert(`Address copied: ${address}`))
-        .catch(() => alert("Failed to copy address"));
-    }
-
-    // Discord Lanyard Integration
-    const discordContainer = document.getElementById('discord-status');
-    const ws = new WebSocket("wss://api.lanyard.rest/socket");
-    let discordId = "577300949044035584"; // your ID
-    ws.onopen = () => ws.send(JSON.stringify({ op: 2, d: { subscribe_to_id: discordId } }));
-    ws.onmessage = (msg) => {
-      const data = JSON.parse(msg.data);
-      if (data.t === "INIT_STATE" || data.t === "PRESENCE_UPDATE") {
-        const presence = data.d.discord_status;
-        const statusText = data.d.activities?.[0]?.state || 'No custom status';
-        const dotColor = presence === 'online' ? 'green' : presence === 'idle' ? 'yellow' : presence === 'dnd' ? 'red' : 'gray';
-        discordContainer.innerHTML = `<div class="flex items-center gap-2"><div class="w-3 h-3 rounded-full bg-${dotColor}-500"></div><span class="font-medium">wrkdd</span></div><div class="mt-2 text-zinc-400 text-sm">${statusText}</div>`;
+    async function fetchLanyard() {
+      try {
+        const res = await fetch('https://api.lanyard.rest/v1/users/577300949044035584');
+        const data = await res.json();
+        if (!data.success) return;
+        const { discord_status, activities } = data.data;
+        const dot = document.getElementById('status-dot');
+        const text = document.getElementById('custom-status');
+        const map = { online: 'bg-green-500', dnd: 'bg-red-500', idle: 'bg-yellow-500', offline: 'bg-gray-500' };
+        dot.className = `w-3 h-3 rounded-full ${map[discord_status] || 'bg-gray-500'}`;
+        const custom = activities.find(a => a.type === 4);
+        text.textContent = custom?.state || 'No status';
+      } catch (e) {
+        console.error('Lanyard error:', e);
       }
     }
+    fetchLanyard();
+    setInterval(fetchLanyard, 15000);
   </script>
 </body>
 </html>
