--- a/index.html
+++ b/index.html
@@ -67,3 +67,33 @@ function updateTime() {
 setInterval(updateTime, 1000);
 updateTime();
 </script></body></html>
+<script>
+function copyToClipboard(text) {
+  navigator.clipboard.writeText(text).then(() => {
+    alert('Copied: ' + text);
+  }).catch(err => {
+    console.error('Copy failed', err);
+  });
+}
+</script>
+
+<script>
+async function fetchLanyard() {
+  try {
+    const res = await fetch('https://api.lanyard.rest/v1/users/577300949044035584');
+    const data = await res.json();
+    if (!data.success) return;
+    const { discord_status, activities } = data.data;
+    const dot = document.getElementById('status-dot');
+    const text = document.getElementById('custom-status');
+    const map = { online: 'bg-green-500', dnd: 'bg-red-500', idle: 'bg-yellow-500', offline: 'bg-gray-500' };
+    dot.className = `w-3 h-3 rounded-full ${map[discord_status] || 'bg-gray-500'}`;
+    const custom = activities.find(a => a.type === 4);
+    text.textContent = custom?.state || 'No status';
+  } catch (e) {
+    console.error('Lanyard error:', e);
+  }
+}
+fetchLanyard();
+setInterval(fetchLanyard, 15000);
+</script>
