--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden"><svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm5 2a5 5 0 1 0 0 10 5 5 0 0 0 0-10zm0 2a3 3 0 1 1 0 6 3 3 0 0 1 0-6zm4.5-.5a1.5 1.5 0 1 0 .001 2.999A1.5 1.5 0 0 0 16.5 5.5z"></path></svg></div>
 <span class="text-sm">Instagram</span>
 </a>
-<a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" href="https://t.me/wrk999" rel="noopener noreferrer" target="_blank">
+<a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" href="https://t.me/wrkfn" rel="noopener noreferrer" target="_blank">
 <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden"><svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg"><path d="M9.993 16.207l-.39 5.513c.561 0 .806-.242 1.099-.531l2.637-2.51 5.47 3.983c1.003.553 1.718.263 2.01-.928L24 4.35c.314-1.305-.467-1.817-1.408-1.486L1.115 9.63C-.24 10.158-.22 10.944.93 11.284l5.738 1.79L19.288 6.27c.63-.393 1.21-.175.736.25L9.993 16.207z"></path></svg></div>
 <span class="text-sm">Telegram</span>
 </a>
