--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <!-- saved from url=(0022)https://www.wrk.money/ -->
-<html lang="en"><meta name="description" content="wrk — cybersecurity student / physical-sec dev.">
+<html lang="en"><meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self' 'unsafe-inline';"><meta name="description" content="wrk — cybersecurity student / physical-sec dev.">
 <meta name="keywords" content="wrk, cybersecurity, dev, portfolio, telegram, discord">
 <meta property="og:title" content="wrk" />
 <meta property="og:description" content="cybersecurity student / physical-sec dev." />
