--- a/index.html
+++ b/index.html
@@ -149,51 +149,44 @@ const phrases = [
   "I love my beautiful wife!!!!"
 ];
 
-let i = 0;
-let j = 0;
+let i = 0; // phrase index
+let j = 0; // character index
 let isDeleting = false;
-let currentPhrase = [];
-let isEnd = false;
+let currentText = '';
+let delay = 100;
 
 const typewriter = document.getElementById('typewriter');
 const cursor = document.getElementById('cursor');
 
-function loop() {
-  isEnd = false;
-  typewriter.innerHTML = currentPhrase.join("");
+function typeLoop() {
+  const fullText = phrases[i];
 
-  if (i < phrases.length) {
-    if (!isDeleting && j <= phrases[i].length) {
-      currentPhrase.push(phrases[i][j]);
-      j++;
-    }
-
-    if (isDeleting && j > 0) {
-      currentPhrase.pop();
-      j--;
-    }
-
-    if (j === phrases[i].length) {
-      isEnd = true;
-      isDeleting = true;
-    }
-
-    if (isDeleting && j === 0) {
-      currentPhrase = [];
-      isDeleting = false;
-      i++;
-      if (i === phrases.length) i = 0;
-    }
+  if (isDeleting) {
+    currentText = fullText.substring(0, j--);
+    delay = 40; // backspace speed
+  } else {
+    currentText = fullText.substring(0, j++);
+    delay = 100; // typing speed
   }
 
-  const typingSpeed = isEnd ? 1500 : isDeleting ? 40 : 100;
-  setTimeout(loop, typingSpeed);
+  typewriter.innerHTML = currentText;
+
+  if (!isDeleting && j > fullText.length) {
+    isDeleting = true;
+    delay = 1500; // pause after full phrase
+  } else if (isDeleting && j === 0) {
+    isDeleting = false;
+    i = (i + 1) % phrases.length;
+    delay = 300; // pause before typing next phrase
+  }
+
+  setTimeout(typeLoop, delay);
 }
 
-// Blinking cursor effect
+// Blinking cursor
 setInterval(() => {
   cursor.style.opacity = cursor.style.opacity === '0' ? '1' : '0';
 }, 500);
 
-loop();
+typeLoop();
 </script>
