--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ setInterval(fetchLanyard, 15000);
 <script>
 const phrases = [
   "Cybersecurity Student",
-  "Physical Security Dev",
+  "Physical Security Developer",
   "Founder @ /wrks",
   "I love my beautiful wife!!!!"
 ];
