--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
 <h3 class="text-white font-bold text-lg mb-2">🎵 Currently Playing</h3>
 <p class="mb-2 text-white">In da party - Smokedope2016</p>
 <audio
-  id="site-audio"
   autoplay
   loop
   controls
   playsinline
   preload="auto"
-  style="width: 100%; filter: invert(1) hue-rotate(180deg);"
+  style="width: 100%; filter: invert(1) brightness(0.8) contrast(1.2); border-radius: 10px;"
 >
   <source src="wrk_files/in-da-party.mp3" type="audio/mp3" />
   Your browser does not support the audio element.
