--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="icon" href="/wrk_files/999circle.png" type="image/png">
 
 <!-- Meta Tags -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; script-src 'self' https://api.lanyard.rest; style-src 'self' 'unsafe-inline';">
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; script-src 'self' 'unsafe-inline' https://api.lanyard.rest; style-src 'self' 'unsafe-inline';">
 <meta name="description" content="wrk — cybersecurity student / physical-sec dev.">
 <meta name="keywords" content="wrk, cybersecurity, dev, portfolio, telegram, discord">
 <meta property="og:title" content="Wrk's Desk." />
