--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <link rel="icon" href="/wrk_files/999circle.png" type="image/png">
 
 <!-- Meta Tags -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data:; script-src 'self' 'unsafe-inline' https://api.lanyard.rest; style-src 'self' 'unsafe-inline';">
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  img-src 'self' data:;
+  script-src 'self';
+  style-src 'self' 'unsafe-inline';
+  connect-src 'self' https://api.lanyard.rest';
+">
 <meta name="description" content="wrk — cybersecurity student / physical-sec dev.">
 <meta name="keywords" content="wrk, cybersecurity, dev, portfolio, telegram, discord">
 <meta property="og:title" content="Wrk's Desk." />
@@ -23,12 +29,23 @@
   <span id="typewriter"></span><span id="cursor">|</span>
 </p>
 </div></div></div><div class="grid grid-cols-1 md:grid-cols-2 gap-4"><div class="glass rounded-lg p-5 h-full glow" style="opacity: 1; transform: none;"><div class="flex items-center gap-3 mb-3"><svg fill="currentColor" height="18" viewbox="0 0 16 16" width="18" xmlns="http://www.w3.org/2000/svg"><path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path></svg><div class="glass rounded-lg p-5 h-full glow" style="opacity: 1; transform: none;">
-  <h3 class="text-sm font-medium mb-2">Discord Status</h3>
-  <iframe
-    src="https://lanyard.cnrad.dev/api/577300949044035584"
-    style="border:none;width:100%;height:150px;background:#18181b;border-radius:0.5rem;"
-    loading="lazy"
-  ></iframe>
+<div class="glass rounded-lg p-5 h-full glow" style="opacity: 1; transform: none;">
+  <div class="flex items-center gap-3 mb-3">
+    <!-- Discord Icon -->
+    <svg ...>...</svg>
+    <h3 class="text-sm font-medium">Discord Status</h3>
+  </div>
+  <div class="text-sm">
+    <div class="flex items-center gap-2 mb-2">
+      <div class="w-3 h-3 rounded-full bg-red-500" id="status-dot"></div>
+      <span class="font-medium">wrkdd</span>
+    </div>
+    <div class="bg-zinc-900/50 rounded-lg p-3 mt-2">
+      <p class="font-medium text-zinc-300">Custom Status: Custom Status</p>
+      <p class="truncate text-zinc-400 mt-1" id="custom-status">/wrks | hadda nuke my crew...</p>
+    </div>
+  </div>
+</div>
 </div>
 <h3 class="text-white font-bold text-lg mb-2">🎵 Currently Playing</h3>
 <p class="mb-2 text-white">In da party - Smokedope2016</p>
@@ -138,35 +155,32 @@ function copyToClipboard(text) {
 }
 </script>
 <script>
-async function fetchLanyard() {
-  try {
-    const res = await fetch("https://api.lanyard.rest/v1/users/577300949044035584");
-    const data = await res.json();
-    if (!data.success) return;
+  document.addEventListener("DOMContentLoaded", () => {
+    async function fetchLanyard() {
+      try {
+        const res = await fetch('https://api.lanyard.rest/v1/users/577300949044035584');
+        const data = await res.json();
+        if (!data.success) return;
+        const { discord_status, activities } = data.data;
+        const dot = document.getElementById('status-dot');
+        const text = document.getElementById('custom-status');
+        const map = {
+          online: 'bg-green-500',
+          dnd: 'bg-red-500',
+          idle: 'bg-yellow-500',
+          offline: 'bg-gray-500'
+        };
+        if (dot) dot.className = `w-3 h-3 rounded-full ${map[discord_status] || 'bg-gray-500'}`;
+        const custom = activities.find(a => a.type === 4);
+        if (text) text.textContent = custom?.state || 'No status';
+      } catch (e) {
+        console.error('Lanyard error:', e);
+      }
+    }
 
-    const { discord_status, activities } = data.data;
-    const dot = document.getElementById("status-dot");
-    const text = document.getElementById("custom-status");
-
-    const map = {
-      online: "bg-green-500",
-      dnd: "bg-red-500",
-      idle: "bg-yellow-500",
-      offline: "bg-gray-500"
-    };
-
-    if (dot) dot.className = `w-3 h-3 rounded-full ${map[discord_status] || 'bg-gray-500'}`;
-
-    const custom = activities.find(a => a.type === 4);
-    if (text) text.textContent = custom?.state || "No status";
-  } catch (e) {
-    console.error("Lanyard error:", e);
-  }
-}
-document.addEventListener("DOMContentLoaded", () => {
-  fetchLanyard();
-  setInterval(fetchLanyard, 15000);
-});
+    fetchLanyard();
+    setInterval(fetchLanyard, 15000);
+  });
 </script>
 <script>
 const phrases = [
