--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <meta http-equiv="Content-Security-Policy" content="
   default-src 'self';
   img-src 'self' data:;
-  script-src 'self';
+  script-src 'self' 'unsafe-inline';
   style-src 'self' 'unsafe-inline';
-  connect-src 'self' https://api.lanyard.rest';
+  connect-src 'self' https://api.lanyard.rest;
 ">
 <meta name="description" content="wrk — cybersecurity student / physical-sec dev.">
 <meta name="keywords" content="wrk, cybersecurity, dev, portfolio, telegram, discord">
