--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@ const phrases = [
   "Cybersecurity Student",
   "Physical Security Developer",
   "Founder @ /wrks",
+  "I own 999 FG @ /apocs",
+  "Apocs on top hoe <3",
   "I love my beautiful wife!!!!"
 ];
 
