--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@ function updateTime() {
   const clock = document.querySelector('#live-time');
   if (clock) {
     const now = new Date();
-    let hours = now.getHours();
-    let minutes = now.getMinutes();
-    let ampm = hours >= 12 ? 'PM' : 'AM';
-    hours = hours % 12;
-    hours = hours ? hours : 12; // the hour '0' should be '12'
-    if (minutes < 10) minutes = '0' + minutes;
-    clock.textContent = hours + ':' + minutes + ' ' + ampm;
+    const options = {
+      hour: 'numeric',
+      minute: '2-digit',
+      hour12: true,
+      timeZone: 'America/Detroit' // Change this to your desired timezone
+    };
+    const formattedTime = now.toLocaleString('en-US', options);
+    clock.textContent = formattedTime;
   }
 }
 setInterval(updateTime, 1000);
