--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </p>
 </div></div></div><div class="grid grid-cols-1 md:grid-cols-2 gap-4"><div class="glass rounded-lg p-5 h-full glow" style="opacity: 1; transform: none;"><div class="flex items-center gap-3 mb-3"><svg fill="currentColor" height="18" viewbox="0 0 16 16" width="18" xmlns="http://www.w3.org/2000/svg"><path d="M13.545 2.907a13.227 13.227 0 0 0-3.257-1.011.05.05 0 0 0-.052.025c-.141.25-.297.577-.406.833a12.19 12.19 0 0 0-3.658 0 8.258 8.258 0 0 0-.412-.833.051.051 0 0 0-.052-.025c-1.125.194-2.22.534-3.257 1.011a.041.041 0 0 0-.021.018C.356 6.024-.213 9.047.066 12.032c.001.014.01.028.021.037a13.276 13.276 0 0 0 3.995 2.02.05.05 0 0 0 .056-.019c.308-.42.582-.863.818-1.329a.05.05 0 0 0-.01-.059.051.051 0 0 0-.018-.011 8.875 8.875 0 0 1-1.248-.595.05.05 0 0 1-.02-.066.051.051 0 0 1 .015-.019c.084-.063.168-.129.248-.195a.05.05 0 0 1 .051-.007c2.619 1.196 5.454 1.196 8.041 0a.052.052 0 0 1 .053.007c.08.066.164.132.248.195a.051.051 0 0 1-.004.085 8.254 8.254 0 0 1-1.249.594.05.05 0 0 0-.03.03.052.052 0 0 0 .003.041c.24.465.515.909.817 1.329a.05.05 0 0 0 .056.019 13.235 13.235 0 0 0 4.001-2.02.049.049 0 0 0 .021-.037c.334-3.451-.559-6.449-2.366-9.106a.034.034 0 0 0-.02-.019Zm-8.198 7.307c-.789 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.45.73 1.438 1.613 0 .888-.637 1.612-1.438 1.612Zm5.316 0c-.788 0-1.438-.724-1.438-1.612 0-.889.637-1.613 1.438-1.613.807 0 1.451.73 1.438 1.613 0 .888-.631 1.612-1.438 1.612Z"></path></svg><h3 class="text-sm font-medium">Discord Status</h3></div><div class="text-sm"><div class="flex items-center gap-2 mb-2"><div class="w-3 h-3 rounded-full bg-red-500" id="status-dot"></div><span class="font-medium">wrkdd</span></div><div class="bg-zinc-900/50 rounded-lg p-3 mt-2"><p class="font-medium text-zinc-300">Custom Status: Custom Status</p><p class="truncate text-zinc-400 mt-1" id="custom-status">/wrks | hadda nuke my crew cuz u cant win fights /apocs on top &lt;3</p></div></div></div><div class="glass rounded-lg p-5 h-full glow" style="opacity: 1; transform: none;">
 <h3 class="text-white font-bold text-lg mb-2">🎵 Currently Playing</h3>
-<p class="mb-2 text-white">In da party - Smokedope2016</p>
+<p class="mb-2 text-white">Game (Legendado) - Juice WRLD</p>
 <audio
   autoplay
   loop
@@ -32,7 +32,7 @@
   preload="auto"
   style="width: 100%; filter: invert(1) brightness(0.8) contrast(1.2); border-radius: 10px;"
 >
-  <source src="wrk_files/in-da-party.mp3" type="audio/mp3" />
+  <source src="wrk_files/game-legendado.mp3" type="audio/mp3" />
   Your browser does not support the audio element.
 </audio>
 </div>
