--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
       <div class="text-center text-zinc-500 text-sm mt-4">
         <p>999 wrld.</p>
       </div>
-      <div class="text-center text-zinc-600 text-xs mt-8">...and for my beautiful wife Keona, i'll love you forever. <3<
-          /div>
+      <div class="text-center text-zinc-600 text-xs mt-8">...and for my beautiful wife Keona, i'll love you forever. <3
+          </div>
       </div>
       <div aria-label="Notifications (F8)" role="region" style="pointer-events: none;" tabindex="-1">
         <ol
