--- a/index.html
+++ b/index.html
@@ -253,17 +253,23 @@ async function enterSite() {
     }
   }
 
-  // CountAPI: Increment and get the updated count on site entry
+  // HitCounter.PythonAnywhere: Increment and get the updated count on site entry
   const viewCountElement = document.getElementById('view-count');
-  const namespace = 'wrkssite'; // Ensure this matches your chosen namespace
-  const key = '99910162005'; // Ensure this matches your chosen key
+  // IMPORTANT: Choose a unique ID for your counter. This will be your unique identifier.
+  const counterId = 'wrk_money_profile_views'; // Example: Use your domain or a unique string
 
   try {
-    await fetch(`https://api.countapi.xyz/hit/${namespace}/${key}`);
-    const response = await fetch(`https://api.countapi.xyz/get/${namespace}/${key}`);
-    const data = await response.json();
-    if (viewCountElement) {
+    // Increment the counter and get the new value
+    const response = await fetch(`https://hitcounter.pythonanywhere.com/hit?id=${counterId}`);
+    const data = await response.json(); // Assuming it returns { "value": X }
+
+    if (viewCountElement && data && typeof data.value === 'number') {
       viewCountElement.textContent = data.value;
+    } else {
+      console.error('Invalid response from hitcounter.pythonanywhere.com:', data);
+      if (viewCountElement) {
+        viewCountElement.textContent = 'N/A';
+      }
     }
   } catch(e) {
     console.error('Error updating view count on site entry:', e);
@@ -329,19 +335,24 @@ async function enterSite() {
     });
   </script>
 <script>
-// Global View Counter Logic using CountAPI (Initial Load)
+// Global View Counter Logic using HitCounter.PythonAnywhere (Initial Load)
 document.addEventListener('DOMContentLoaded', async () => {
   const viewCountElement = document.getElementById('view-count');
-  const namespace = 'wrkssite'; // Ensure this matches your chosen namespace
-  const key = '99910162005'; // Ensure this matches your chosen key
+  // IMPORTANT: Use the same unique ID as in the enterSite() function.
+  const counterId = 'wrk_money_profile_views'; // Example: Use your domain or a unique string
 
   try {
-    // Only get the count on DOMContentLoaded; the 'hit' happens when enterSite() is called
-    const response = await fetch(`https://api.countapi.xyz/get/${namespace}/${key}`);
-    const data = await response.json();
+    // Get the current count without incrementing
+    const response = await fetch(`https://hitcounter.pythonanywhere.com/get?id=${counterId}`);
+    const data = await response.json(); // Assuming it returns { "value": X }
 
-    if (viewCountElement) {
+    if (viewCountElement && data && typeof data.value === 'number') {
       viewCountElement.textContent = data.value;
+    } else {
+      console.error('Invalid response from hitcounter.pythonanywhere.com:', data);
+      if (viewCountElement) {
+        viewCountElement.textContent = 'N/A';
+      }
     }
   } catch(e) {
     console.error('Error fetching initial view count:', e);
