--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
     <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
+  <style>
+    body {
+      background-color: #331163 !important; /* Dark Purple */
+    }
+    /* You might want to adjust the 'glass' elements for better contrast/transparency */
+    .glass {
+      background-color: rgba(0, 0, 0, 0.4) !important; /* Example: More transparent black */
+      backdrop-filter: blur(10px); /* Keep the blur effect */
+    }
+  </style>
 </head>
 
 <body class="__variable_d65c78 __variable_4bc053 bg-black text-white font-sans">
