--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </style>
 </head>
 
-<body class="__variable_d65c78 __variable_4bc053 bg-black text-white font-sans">
+<body class="__variable_d65c78 __variable_4bc053 text-white font-sans">
   <div id="splash" onclick="enterSite()"
     style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999;background:rgba(0,0,0,0.9);backdrop-filter:blur(12px);display:flex;align-items:center;justify-content:center;flex-direction:column;color:white;font-family:sans-serif;text-align:center;cursor:pointer;">
     <h1 style="font-size:2rem;margin-bottom:0.5rem;">Click / Tap Anywhere to Enter</h1>
