--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body class="__variable_d65c78 __variable_4bc053 text-white font-sans">
   <div class="video-background">
     <video autoplay loop muted playsinline>
-      <source src="path/to/your/roblox-export.mp4" type="video/mp4">
+      <source src="./wrk_files/roblox-export.mp4" type="video/mp4">
       <!-- You can add more <source> tags for different video formats for broader browser compatibility -->
       <!-- <source src="path/to/your/video.webm" type="video/webm"> -->
       Your browser does not support the video tag.
