--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
     body {
-      background-color: #331163 !important; /* Dark Purple base color */
     }
     .glass {
       background-color: rgba(0, 0, 0, 0.4) !important; /* Example: More transparent black */
@@ -70,7 +69,7 @@
         style="position: absolute; border: 0px; height: 1px; margin: -1px; padding: 0px; width: 1px; clip: rect(0px, 0px, 0px, 0px); overflow: hidden; white-space: nowrap; overflow-wrap: normal;">
       </div>
     </template></next-route-announcer>
-  <main class="min-h-screen animated-gradient text-white flex flex-col items-center justify-center p-4 relative">
+  <main class="min-h-screen text-white flex flex-col items-center justify-center p-4 relative">
     <div class="w-full max-w-3xl mx-auto flex flex-col gap-6 py-8">
       <div class="text-center mb-4" style="opacity: 1; transform: none;">
         <div class="text-2xl md:text-3xl font-mono tracking-wider"><span id="live-time">--:--</span></div>
