--- a/index.html
+++ b/index.html
@@ -44,13 +44,12 @@
 </head>
 
 <body class="__variable_d65c78 __variable_4bc053 text-white font-sans">
-  <div class="video-background">
-    <video autoplay loop muted playsinline>
-      <source src="./wrk_files/roblox-export.mp4" type="video/mp4">
-      <!-- You can add more <source> tags for different video formats for broader browser compatibility -->
-      <!-- <source src="path/to/your/video.webm" type="video/webm"> -->
-      Your browser does not support the video tag.
-    </video>
+<div class="video-background">
+  <video autoplay loop muted playsinline preload="auto">
+    <source src="./wrk_files/roblox-export.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
   </div>
   <div id="splash" onclick="enterSite()"
     style="position:fixed;top:0;left:0;width:100%;height:100%;z-index:9999;background:rgba(0,0,0,0.9);backdrop-filter:blur(12px);display:flex;align-items:center;justify-content:center;flex-direction:column;color:white;font-family:sans-serif;text-align:center;cursor:pointer;">
