--- a/index.html
+++ b/index.html
@@ -74,12 +74,19 @@
         <div class="flex items-center gap-5">
           <div class="relative w-20 h-20 rounded-full overflow-hidden border-2 border-zinc-800 glow"><img alt="Profile"
               class="w-full h-full object-cover" src="./wrk_files/giphy.gif" /></div>
-          <div class="flex flex-col">
-            <h1 class="text-2xl font-bold tracking-wide">wrk</h1>
-            <p class="text-zinc-400 text-sm mt-1">
-              <span id="typewriter"></span><span id="cursor">|</span>
-            </p>
-          </div>
+<div class="flex flex-col">
+  <div class="flex items-center gap-2">
+    <h1 class="text-2xl font-bold tracking-wide">wrk</h1>
+    <div class="badge-container">
+      <div class="badge" data-tooltip="999 kid">
+        <img src="./wrk_files/999circle.png" alt="999 badge" class="badge-image">
+      </div>
+    </div>
+  </div>
+  <p class="text-zinc-400 text-sm mt-1">
+    <span id="typewriter"></span><span id="cursor">|</span>
+  </p>
+</div>
         </div>
         <div class="absolute bottom-0 right-0 flex items-center text-zinc-400 text-xs p-4">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
