--- a/index.html
+++ b/index.html
@@ -78,8 +78,20 @@
   <div class="flex items-center gap-2">
     <h1 class="text-2xl font-bold tracking-wide">wrk</h1>
     <div class="badge-container">
+      <div class="badge" data-tooltip="wrk.money developer">
+        <img src="./wrk_files/devbadge.png" alt="wrk.money developer" class="badge-image">
+      </div>
+      <div class="badge" data-tooltip="sonder.wtf developer">
+        <img src="./wrk_files/devbadge.png" alt="sonder.wtf developer" class="badge-image">
+      </div>
+      <div class="badge" data-tooltip="funny man">
+        <img src="./wrk_files/sofunny.png" alt="funny man" class="badge-image">
+      </div>
       <div class="badge" data-tooltip="999 kid">
-        <img src="./wrk_files/999circle.png" alt="999 badge" class="badge-image">
+        <img src="./wrk_files/999circle.png" alt="999 kid" class="badge-image">
+      </div>
+      <div class="badge" data-tooltip="badge maker / collector">
+        <img src="./wrk_files/badgecollector.png" alt="badge maker / collector" class="badge-image">
       </div>
     </div>
   </div>
