--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       </div>
      <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
   <h3 class="text-sm font-medium mb-4">Socials</h3>
-  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-3 place-items-center">
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+  <div class="grid grid-cols-2 sm:grid-cols-4 gap-3 place-items-center">
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://discord.com/users/577300949044035584" rel="noopener noreferrer" target="_blank">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
@@ -155,7 +155,7 @@
       <span class="text-sm">Discord</span>
     </a>
 
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://steamcommunity.com/id/wrk999/" rel="noopener noreferrer" target="_blank">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="22" viewbox="0 0 16 16" width="22" xmlns="http://www.w3.org/2000/svg">
@@ -166,7 +166,7 @@
       <span class="text-sm">Steam</span>
     </a>
 
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://instagram.com/up4i" rel="noopener noreferrer" target="_blank">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
@@ -176,7 +176,7 @@
       <span class="text-sm">Instagram</span>
     </a>
 
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300" 
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://t.me/ogkush" rel="noopener noreferrer" target="_blank">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
         <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
@@ -190,31 +190,29 @@
 
 <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
   <h3 class="text-sm font-medium mb-4">Payments</h3>
-  <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-3 gap-3 place-items-center">
-    <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+  <div class="grid grid-cols-3 gap-3 place-items-center">
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://www.paypal.com/paypalme/g6zey" rel="noopener noreferrer" target="_blank">
-      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
-          <path d="M5 3h14a2 2 0 0 1 2 2v1H3V5a2 2 0 0 1 2-2zM3 8h18v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8z"></path>
-        </svg>
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <img src="/wrk_files/pplogo.png" alt="PayPal" class="w-6 h-6 object-contain">
       </div>
       <span class="text-sm">PayPal</span>
     </a>
 
-    <a class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
        href="https://cash.app/$sleepydidit" rel="noopener noreferrer" target="_blank">
-      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20">
           <path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"></path>
         </svg>
       </div>
       <span class="text-sm">Cashapp</span>
     </a>
 
-    <button class="flex flex-col items-center justify-center p-4 rounded-lg glass glass-hover transition-all duration-300" 
+    <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('hatedisugly.ton')">
-      <div class="flex items-center justify-center w-12 h-12 rounded-full bg-zinc-800/80 mb-3 glow overflow-hidden">
-        <svg fill="currentColor" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
           <path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path>
         </svg>
       </div>
