--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
               class="w-full h-full object-cover" src="./wrk_files/giphy.gif" /></div>
 <div class="flex flex-col">
   <div class="flex items-center gap-2">
-    <h1 class="text-2xl font-bold tracking-wide">wrk</h1>
+    <h1 class="text-2xl font-bold tracking-wide">ogkush</h1>
     <div class="badge-container">
       <div class="badge" data-tooltip="wrk.money developer">
         <img src="./wrk_files/devbadge.png" alt="wrk.money developer" class="badge-image">
