--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
       </div>
     </div>
   </div>
-  <p class="text-[10px] text-zinc-500 uppercase tracking-tighter -mt-1 mb-1">
-    AKA wrk, sleep, slept, up4i, upevil and indicas
+  <p class="text-[6px] text-zinc-500 uppercase tracking-tighter -mt-1 mb-1">
+    aka wrk, sleep, slept, up4i, upevil and indicas
   </p>
   <p class="text-zinc-400 text-sm mt-1">
     <span id="typewriter"></span><span id="cursor">|</span>
