--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
           cursor: default !important;
         }
       }
+
+    /* Glow effect for the Discord status text and emoji */
+  #custom-status {
+    text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+    color: #ffffff !important; /* Force text to white to make the glow pop */
+  }
+
+  #custom-status img {
+    filter: drop-shadow(0 0 5px rgba(255, 255, 255, 0.7));
+    margin-right: 6px; /* A bit of spacing for the reaper */
+  }
     </style>
 </head>
 
