--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <div class="w-3 h-3 rounded-full bg-red-500" id="status-dot"></div><span class="font-medium">wrkdd</span>
             </div>
             <div class="bg-zinc-900/50 rounded-lg p-3 mt-2">
-              <p class="font-medium text-zinc-300">Custom Status: Custom Status</p>
+              <p class="font-medium text-zinc-300">My Discord Status.</p>
               <p class="truncate text-zinc-400 mt-1" id="custom-status">/wrks | hadda nuke my crew cuz u cant win fights
                 /apocs on top &lt;3</p>
             </div>
