--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ document.addEventListener('DOMContentLoaded', function() {
     "Physical Security Developer",
     "Founder @ /wrks",
     "@ogkush on telegram <3",
-    "999 forever."
+    "999 forever.",
     "I love my beautiful wife!!!!"
   ];
 
