--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           </div>
           <div class="text-sm">
             <div class="flex items-center gap-2 mb-2">
-              <div class="w-3 h-3 rounded-full bg-red-500" id="status-dot"></div><span class="font-medium">wrkdd</span>
+              <div class="w-3 h-3 rounded-full bg-red-500" id="status-dot"></div><span class="font-medium">ogkushh</span>
             </div>
             <div class="bg-zinc-900/50 rounded-lg p-3 mt-2">
               <p class="font-medium text-zinc-300">My Discord Status.</p>
