--- a/index.html
+++ b/index.html
@@ -215,25 +215,40 @@
 
 <div class="glass rounded-lg p-5 glow" style="opacity: 1; transform: none;">
   <h3 class="text-sm font-medium mb-4">Payments</h3>
-  <div class="grid grid-cols-3 gap-3 place-items-center">
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
-       href="https://www.paypal.com/paypalme/g6zey" rel="noopener noreferrer" target="_blank">
-      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-        <img src="/wrk_files/pplogo.png" alt="PayPal" class="w-6 h-6 object-contain">
-      </div>
-      <span class="text-sm">PayPal</span>
-    </a>
 
-    <a class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
-       href="https://cash.app/$sleepydidit" rel="noopener noreferrer" target="_blank">
+      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+            onclick="copyToClipboard('bc1qqfgr004dsutvl0hrj8qw5ndzed6c80zqrsmhjd')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
-        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20">
-          <path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"></path>
+        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path>
         </svg>
       </div>
-      <span class="text-sm">Cashapp</span>
-    </a>
+      <span class="text-sm">BTC</span>
+    </button>
+  </div>
 
+      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+            onclick="copyToClipboard('0x63fC44372E64fd4b2E60935e2ac6a3858a80D841')">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">ETH</span>
+    </button>
+  </div>
+
+      <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
+            onclick="copyToClipboard('0x63fC44372E64fd4b2E60935e2ac6a3858a80D841')">
+      <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
+        <svg fill="currentColor" height="20" viewbox="0 0 24 24" width="20" xmlns="http://www.w3.org/2000/svg">
+          <path d="M12 2L4.5 20.29l.71.71L12 18l6.79 3 .71-.71z"></path>
+        </svg>
+      </div>
+      <span class="text-sm">USDT on ETH</span>
+    </button>
+  </div>
+  
     <button class="flex flex-col items-center justify-center p-2 rounded-lg glass glass-hover transition-all duration-300 w-full" 
             onclick="copyToClipboard('hatedisugly.ton')">
       <div class="flex items-center justify-center w-10 h-10 rounded-full bg-zinc-800/80 mb-2 glow overflow-hidden">
